# dummy-raytracer

./: .gitignore  CMakeLists.txt
dummy-raytracer/: CMakeLists.txt  color.h  dummy-raytracer.cpp  dummy-raytracer.h  ray.h  vec3.h
